--- a/electron/dialogs/about.html
+++ b/electron/dialogs/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>About Chrono Clock</title>
+  <title>About Editor</title>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
