--- a/electron/dialogs/about.html
+++ b/electron/dialogs/about.html
@@ -122,7 +122,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Chrono Clock</h1>
+    <h1>Editor</h1>
     <p>A modern desktop editor application that combines elegance with functionality.</p>
     <p>Created by Hidenori Takaku</p>
     <p class="version">Version 1.0.0</p>
